clean up scripts